// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoUpdate prevent renderings from above  1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new BText(ctx['props'].value);
    return b1;
  }
}"
`;

exports[`NoUpdate prevent renderings from above  2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  const slot3 = ctx => (node, key) => {
    const b2 = new BComponent(\`Child\`, {value: ctx['state'].value}, key + \`__4\`, ctx, node);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new BMulti(2);
    b1.children[0] = new BComponent(\`Child\`, {value: ctx['state'].value}, key + \`__1\`, ctx, node);
    const b3 = b1.children[1] = new BComponent(\`NoUpdate\`, {}, key + \`__2\`, ctx, node);
    b3.node.slots = {'default': slot3(ctx)};
    return b1;
  }
}"
`;
